make vclcanvas try directly VCL for drawing stroked polygon (tdf#136933)

There's no point in trying to do all the stroking stuff manually
if the VCL function can do it and better/faster.

Change-Id: I9949637e2504d9b5d10ac77fbd5bd1f491ea6eee